tools/crates/vendor/toml_edit/tests/fixtures/invalid/string/multiline-no-close-5.stderr
TOML parse error at line 3, column 8
  |
3 | gee\	 
  |        ^
invalid multiline basic string
